<resources>
    <string name="app_name" translatable="false">FunWeather</string>
    <string name="btn_update">Update</string>
    <string name="temp">Temp:</string>
    <string name="temp_feels">Feels like:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="city_name">City: </string>
    <string name="description">Weather condition</string>
    <string name="powered_by">Powered by OpenWeatherMap®</string>>
</resources>