<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/city_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/temp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_temp_feels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/temp_feels"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/wind_speed"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/wind_direction"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/humidity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:textSize="24sp"
        android:text=""
        android:textStyle="italic" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="165dp"
        android:textSize="12sp"
        android:text="@string/powered_by" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/btn_update"
        tools:ignore="TouchTargetSizeCheck" />



</LinearLayout>